--- a/page-parking.html
+++ b/page-parking.html
@@ -27,7 +27,10 @@
     <div class="animation_visuelle">
 
     </div>
-    
+    <div class="container">
+      <canvas id="myChart"></canvas>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script
       src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
       integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
