--- a/page-map.html
+++ b/page-map.html
@@ -18,7 +18,6 @@
       <span class="title p1">Where can I park?</span>
       <span class="text p2">parkings</span>
       <span class="text p3">plan</span>
-      <span class="text p4">our project</span>
     </div>
     <div class="container map">
       <div id="map"></div>
@@ -27,6 +26,6 @@
 
     <!-- Script js -->
     <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="crossorigin=""></script>
-    <script src="js/map.js"></script>
+    <script src="js/page_map.js"></script>
   </body>
 </html>
