--- a/index.html
+++ b/index.html
@@ -1,15 +1,36 @@
-<!doctype html>
-<html lang="en">
-    <head>
-        <title>My web page</title>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="css/style.css">
-    </head>
+<!Doctype html>
+<html lang="fr">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>Where can I park?</title>
+    <link rel="stylesheet" href="css/projet-style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+<head>
     <body>
-        <h1>Ada Tech School</h1>
-        <p id="dataViz"></p>
-        <script src="js/script.js"></script>
-    </body>
+        <header>
+          <nav>
+            <a class="logo" href="index.html">Where Can I Park?</a>
+              <div class="line1"></div>
+              <div class="line2"></div>
+              <div class="line3"></div>
+            </div>
+            <ul class="nav-list">
+              <li><a href="page-parking.html">Parkings</a></li>
+              <li><a href="#">Plan</a></li>
+              <li><a href="#">Our project</a></li>
+            </ul>
+          </nav>
+        </header>
+        <p class="format1">Looking for a place to park in Nantes ?</p>
+        <p class="format2">We got your back. Find here the list of car parks close to your position.</p>
+        <img src="img/caravane.png" class="carlogo">
+        <img src="img/nantes1.jpg" class="city">
+      </body>
+    </html>
+    
 </html>
