--- a/page-parking.html
+++ b/page-parking.html
@@ -10,29 +10,23 @@
     integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI="
     crossorigin=""/>
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-    <link rel="preconnect" href="https://fonts.googleapis.com"> 
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+<link rel="preconnect" href="https://fonts.googleapis.com"> 
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   </head>
 
   <body>
 
     <!-- Header + nav -->
-    <header>
-      <nav>
-        <a class="logo" href="index.html">Where Can I Park?</a>
-          <div class="line1"></div>
-          <div class="line2"></div>
-          <div class="line3"></div>
-        </div>
-        <ul class="nav-list">
-          <li><a href="page-parking.html">Parkings</a></li>
-          <li><a href="page-map.html">Plan</a></li>
-          <li><a href="page-project.html">Our project</a></li>
+    <div class="header">
+      <h1 id="logo">Where can I park my car?</h1>
+      <ul class="container">
+          <li><a href="parking">parkings</a></li>
+          <li><a href="plan">plan</a></li>
+          <li><a href="project">our project</a></li>
         </ul>
-      </nav>
-    </header>
+    </div>
 
     <!-- Parkings -->
     <div class="infos_parking bloc">
