--- a/page-map.html
+++ b/page-map.html
@@ -5,25 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Map</title>
-    <linkrel="stylesheet"href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI="crossorigin=""/>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css" integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI=" crossorigin=""/>
     <!-- Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet"/>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style-map.css" />
   </head>
   <body>
-    <!-- div container that get 4 parapgraphe -->
-    <div class="container header">
-      <span class="title p1">Where can I park?</span>
-      <span class="text p2">parkings</span>
-      <span class="text p3">plan</span>
-    </div>
-    <div class="container map">
+    <header>
+      <nav>
+        <a class="logo" href="index.html">Where Can I Park?</a>
+          <div class="line1"></div>
+          <div class="line2"></div>
+          <div class="line3"></div>
+        </div>
+        <ul class="nav-list">
+          <li><a href="page-parking.html">Parkings</a></li>
+          <li><a href="#">Plan</a></li>
+          <li><a href="#">Our project</a></li>
+        </ul>
+      </nav>
       <div id="map"></div>
-    </div>
-    <p id="dataViz"></p>
-
+    </header>
     <!-- Script js -->
     <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="crossorigin=""></script>
     <script src="js/page_map.js"></script>
