--- a/index.html
+++ b/index.html
@@ -18,11 +18,10 @@
               <div class="line1"></div>
               <div class="line2"></div>
               <div class="line3"></div>
-            </div>
             <ul class="nav-list">
               <li><a href="page-parking.html">Parkings</a></li>
-              <li><a href="#">Plan</a></li>
-              <li><a href="#">Our project</a></li>
+              <li><a href="page-map.html">Plan</a></li>
+              <li><a href="page-project.html">Our project</a></li>
             </ul>
           </nav>
         </header>
@@ -32,5 +31,4 @@
         <img src="img/nantes1.jpg" class="city">
       </body>
     </html>
-    
 </html>
