correction redirection liens dans la page grand plan

--- a/page-map.html
+++ b/page-map.html
@@ -22,8 +22,8 @@
         </div>
         <ul class="nav-list">
           <li><a href="page-parking.html">Parkings</a></li>
-          <li><a href="#">Plan</a></li>
-          <li><a href="#">Our project</a></li>
+          <li><a href="page-map.html">Plan</a></li>
+          <li><a href="page-project.html">Our project</a></li>
         </ul>
       </nav>
       <div id="map"></div>
