avec menu search

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <p class="format2">We got your back. Find here the list of car parks close to your position.</p>
         <img src="img/caravane.png" class="carlogo">
         <img src="img/nantes1.jpg" class="city">
+         <input type="search" class="search" placeholder="Search"></input>
       </body>
     </html>
 </html>
