--- a/page-parking.html
+++ b/page-parking.html
@@ -34,66 +34,9 @@
     </nav>
     </header>
 
-    <div class="bloc">
-      <!-- Parkings -->
-      <div class="infos_parking">
-        <h1 id="Feydeau">Feydeau</h1>
-        <div id="map"></div>
-        <h3 id="capacite_max"></h3>
-        <h3 id="places_dispo"></h3>
-      </div>
-
-      <!--Le graphique lié au parking-->
-      <div class="graphique">
-        <canvas id="myChart"></canvas>
-      </div>
+    <div class="allParking">
+      
     </div>
-
-    <div class="bloc">
-      <!-- Parkings -->
-      <div class="infos_parking">
-        <h1 id="Bouffay">Bouffay</h1>
-        <div id="map"></div>
-        <h3 id="capacite_max"></h3>
-        <h3 id="places_dispo"></h3>
-      </div>
-
-      <!--Le graphique lié au parking-->
-      <div class="graphique">
-        <canvas id="myChart"></canvas>
-      </div>
-    </div>
-
-    <div class="bloc">
-      <!-- Parkings -->
-      <div class="infos_parking">
-        <h1 id="nom_parking">Nom parking</h1>
-        <div id="map"></div>
-        <h3 id="capacite_max"></h3>
-        <h3 id="places_dispo"></h3>
-      </div>
-
-      <!--Le graphique lié au parking-->
-      <div class="graphique">
-        <canvas id="myChart"></canvas>
-      </div>
-    </div>
-
-    <div class="bloc">
-      <!-- Parkings -->
-      <div class="infos_parking">
-        <h1 id="nom_parking">Nom parking</h1>
-        <div id="map"></div>
-        <h3 id="capacite_max"></h3>
-        <h3 id="places_dispo"></h3>
-      </div>
-
-      <!--Le graphique lié au parking-->
-      <div class="graphique">
-        <canvas id="myChart"></canvas>
-      </div>
-    </div>
-
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
     <script
