--- a/index.html
+++ b/index.html
@@ -29,7 +29,16 @@
         <p class="format2">We got your back. Find here the list of car parks close to your position.</p>
         <img src="img/caravane.png" class="carlogo">
         <img src="img/nantes1.jpg" class="city">
-        <input type="search" class="search" placeholder="Search"></input>
+        <!--input type="search" class="search" placeholder="Search"></input-->
+        <!--fieldset>
+          <select>
+            <ul class="search">
+              <option><a href="page-parking.html#Graslin"></a></option></li>
+              <option><li><a href="page-parking.html#Gare Sud 2"></a></li></option>
+              <li><a href="page-parking.html#Place du Cirque"></a></li>
+            </ul>
+					</select>
+        </fieldset-->
       </body>
     </html>
 </html>
