bouton recherche page d'accueil et responsivité css

--- a/index.html
+++ b/index.html
@@ -1,36 +1,78 @@
-<!Doctype html>
+<!DOCTYPE html>
 <html lang="fr">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1, user-scalable=yes">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width,initial-scale=1, user-scalable=yes"
+    />
     <title>Where can I park?</title>
-    <link rel="stylesheet" href="css/projet-style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-<head>
-    <body>
-        <header>
-          <nav>
-            <a class="logo" href="index.html">Where Can I Park?</a>
-              <div class="line1"></div>
-              <div class="line2"></div>
-              <div class="line3"></div>
-            <ul class="nav-list">
-              <li><a href="page-parking.html">Parkings</a></li>
-              <li><a href="page-map.html">Plan</a></li>
-              <li><a href="page-project.html">Our project</a></li>
-            </ul>
-          </nav>
-        </header>
-        <p class="format1">Looking for a place to park in Nantes ?</p>
-        <p class="format2">We got your back. Find here the list of car parks close to your position.</p>
-        <img src="img/caravane.png" class="carlogo">
-        <img src="img/nantes1.jpg" class="city">
-        <!-- input type="search" class="search" placeholder="Search"></input-->
-        <!--fieldset>
+    <link rel="stylesheet" href="css/projet-style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <header>
+      <nav>
+        <a class="logo" href="index.html">Where Can I Park?</a>
+        <div class="line1"></div>
+        <div class="line2"></div>
+        <div class="line3"></div>
+        <ul class="nav-list">
+          <li><a href="page-parking.html">Parkings</a></li>
+          <li><a href="page-map.html">Plan</a></li>
+          <li><a href="page-project.html">Our project</a></li>
+        </ul>
+      </nav>
+    </header>
+    <section class="centrepage">
+      <section class="main">
+        <p class="format1">Looking for a place </br>to park in Nantes ?</p></br>
+        <p class="format2">
+          We got your back. Find here the list of car parks close to your
+          position.
+        </p></br>
+
+        <li class="deroulant">
+          <a href="page-parking.html">View all</a>
+          <ul class="sous">
+            <li>
+              <a href="page-parking.html#Graslin" class="liste_deroulante"
+                >Graslin</a
+              >
+            </li>
+            <li>
+              <a href="page-parking.html#Gare Sud 2" class="liste_deroulante"
+                >Gare Sud 2</a
+              >
+            </li>
+            <li><a href="" class="liste_deroulante">Graslin</a></li>
+            <li><a href="" class="liste_deroulante">Tour Bretagne</a></li>
+          </ul>
+        </li></br>
+
+        <img src="img/caravane.png" class="carlogo" />
+      </section>
+
+      <!-- <select>
+          <option>Choose a parking</option>
+          <option value="1" ><a href="page-parking.html#Graslin">Graslin</a></option>
+          <option value="2">Bouffay</option>
+          <option value="3">Gare Sud</option>
+          <option value="4">Tour Bretagne</option>
+        </select> -->
+
+      <section class="imageaccueil">
+        <img src="img/nantes1.jpg" class="city" />
+      </section>
+    </section>
+    <!-- input type="search" class="search" placeholder="Search"></input-->
+    <!--fieldset>
           <select>
             <ul class="search">
               <option><a href="page-parking.html#Graslin"></a></option></li>
@@ -39,6 +81,5 @@
             </ul>
 					</select>
         </fieldset -->
-      </body>
-    </html>
+  </body>
 </html>
