bouton page d'acceuil et barre de recherche WIP sur la page parking

--- a/index.html
+++ b/index.html
@@ -32,29 +32,15 @@
     </header>
     <section class="centrepage">
       <section class="main">
-        <p class="format1">Looking for a place </br>to park in Nantes ?</p></br>
+        <p class="format1">Looking for a place <br />to park in Nantes ?</p>
         <p class="format2">
           We got your back. Find here the list of car parks close to your
           position.
-        </p></br>
+        </p>
 
         <li class="deroulant">
           <a href="page-parking.html">View all</a>
-          <ul class="sous">
-            <li>
-              <a href="page-parking.html#Graslin" class="liste_deroulante"
-                >Graslin</a
-              >
-            </li>
-            <li>
-              <a href="page-parking.html#Gare Sud 2" class="liste_deroulante"
-                >Gare Sud 2</a
-              >
-            </li>
-            <li><a href="" class="liste_deroulante">Graslin</a></li>
-            <li><a href="" class="liste_deroulante">Tour Bretagne</a></li>
-          </ul>
-        </li></br>
+        </li>
 
         <img src="img/caravane.png" class="carlogo" />
       </section>
