search barre dans page parking fonctionnelle + changement couleurs graphique

--- a/page-parking.html
+++ b/page-parking.html
@@ -35,20 +35,70 @@
     </header>
     <section class="search">
       <li class="deroulant">
-        <a href="page-parking.html">View all</a>
+        <a href="page-parking.html">Search...</a>
         <ul class="sous">
-          <li>
-            <a href="page-parking.html#Graslin" class="liste_deroulante"
-              >Graslin</a
-            >
+          <li><a href="#Graslin" class="liste_deroulante">Graslin</a>
           </li>
-          <li>
-            <a href="page-parking.html#Gare Sud 2" class="liste_deroulante"
-              >Gare Sud 2</a
-            >
+          <li><a href="#Decré-Bouffay" class="liste_deroulante">Decré-Bouffay</a>
           </li>
-          <li><a href="" class="liste_deroulante">Graslin</a></li>
-          <li><a href="" class="liste_deroulante">Tour Bretagne</a></li>
+          <li><a href="#Tour Bretagne" class="liste_deroulante">Tour Bretagne</a>
+          </li>
+          <li><a href="#Gare Canal" class="liste_deroulante">Gare Canal</a>
+          </li>
+          <li><a href="#Gare Nord" class="liste_deroulante">Gare Nord</a>
+          </li>
+          <li><a href="#Gare Sud 1" class="liste_deroulante">Gare Sud 1</a>
+          </li>
+          <li><a href="#Gare Sud 2" class="liste_deroulante">Gare Sud 2</a>
+          </li>
+          <li><a href="#Gare Sud 2 : Limité 1h" class="liste_deroulante">Gare Sud 2 : limité 1 heure</a>
+          </li>
+          <li><a href="#Gare Sud 3" class="liste_deroulante">Gare Sud 3</a>
+          </li>
+          <li><a href="#Gare Sud 4" class="liste_deroulante">Gare Sud 4</a>
+          </li>
+          <li><a href="#Feydeau" class="liste_deroulante">Feydeau</a>
+          </li>
+          <li><a href="#Commerce" class="liste_deroulante">Commerce</a>
+          </li>
+          <li><a href="#Cathédrale" class="liste_deroulante">Cathédrale</a>
+          </li>
+          <li><a href="#Descartes" class="liste_deroulante">Descartes</a>
+          </li>
+          <li><a href="#Baco-LU 1" class="liste_deroulante">Baco-LU 1</a>
+          </li>
+          <li><a href="#Baco-LU 2" class="liste_deroulante">Baco-LU 2</a>
+          </li>
+          <li><a href="#Chantiers Navals" class="liste_deroulante">Chantiers Navals</a>
+          </li>
+          <li><a href="#Aristide Briand" class="liste_deroulante">Aristide Briand</a>
+          </li>
+          <li><a href="#Cité des Congrès" class="liste_deroulante">Cité des Congrès</a>
+          </li>
+          <li><a href="#Bellamy" class="liste_deroulante">Bellamy</a>
+          </li>
+          <li><a href="#Fonderies" class="liste_deroulante">Fonderies</a>
+          </li>
+          <li><a href="#Les Nefs" class="liste_deroulante">Les Nefs</a>
+          </li>
+          <li><a href="#Médiathèque" class="liste_deroulante">Médiathèque</a>
+          </li>
+          <li><a href="#Talensac" class="liste_deroulante">Talensac</a>
+          </li>
+          <li><a href="#Les machines" class="liste_deroulante">Les machines</a>
+          </li>
+          <li><a href="#Gloriette 1" class="liste_deroulante">Gloriette 1</a>
+          </li>
+          <li><a href="#Gloriette 2" class="liste_deroulante">Gloriette 2</a>
+          </li>
+          <li><a href="#Hôtel Dieu" class="liste_deroulante">Hôtel Dieu</a>
+          </li>
+          <li><a href="#CHU 1" class="liste_deroulante">CHU 1</a>
+          </li>
+          <li><a href="#CHU 2" class="liste_deroulante">CHU 2</a>
+          </li>
+          <li><a href="#Château" class="liste_deroulante">Château</a>
+          </li>
         </ul>
       </li>
     </section>
