page projet avec plus de responsivité

--- a/page-project.html
+++ b/page-project.html
@@ -25,12 +25,20 @@
             </ul>
           </nav>
         </header>
+
+        <section class="centrepage">
+          <section class="main">
         <p class="format1">Hello there! </br>Want to know more?</p>
         <p class="format2">We are pleased to welcome you on our little project. We’re three developper students and we wanted to create a usefull site while practicing using public API. 
           Thanks for your visit, 
           and see you soon!</p>
+
         <img src="img/goodbye.png" class="byelogo">
+      </section>
+      <section class="image_equipe">
         <img src="img/equipe.jpg" class="equipe">
+      </section>
+      </section>
       </body>
     </html>
 </html>
